# TradingSimulator

./: .gitignore  CMakeLists.txt  README.md  TASK.md
src/: CMakeLists.txt  main.cpp
src/common/: Types.h
src/config/: Config.h  ConfigManager.cpp  ConfigManager.h
src/logs/: OrderLogger.cpp  OrderLogger.h  TickLogger.cpp  TickLogger.h
src/simulation/: Simulator.cpp  Simulator.h
src/trading/: EmaTradingBot.cpp  EmaTradingBot.h  ExchangeApi.cpp  ExchangeApi.h  OrderManager.cpp  OrderManager.h  TimeEMA.cpp  TimeEMA.h
tests/: CMakeLists.txt
tests/unit/: BaseTests.cpp  ConfigManagerTests.cpp  EmaTradingBotTests.cpp  ExchangeApiTests.cpp  OrderLoggerTests.cpp  OrderManagerTests.cpp  SimulatorTests.cpp  TickLoggerTests.cpp  TimeEMATests.cpp  TypesTests.cpp
